# atomistic-cookbook

./: .gitignore  .isort.cfg  .readthedocs.yml  CNAME  CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  INSTALLING.rst  LICENSE  README.rst  all-examples.html  contributing.html  downloading.html  generate-gallery.py  genindex.html  index.html  introduction_to_torch_geometric_for_atomistic_machine_learning.ipynb  ipynb-to-gallery.py  ipynb_to_gallery.py  log.lammps  noxfile.py  objects.inv  pixi.toml  pyproject.toml  requirements.txt  robots.txt  search.html  searchindex.js  sitemap.xml  tox.ini  utils.html
.github/workflows/: comment-docs-download.yml  deploy.yml  docs.yml  documentation-preview.yml  lint.yml  publish-utils.yml
_downloads/0130684eda9cbadbd32996a06a9e61b5/: periodic-hamiltonian.py
_downloads/02b97650765168f1ec07f63db3b6f4a7/: hamiltonian-qm7.ipynb
_downloads/0b6010fb87f2e6fd05237aba45ff3d9a/: torchpme_learning.ipynb
_downloads/0fbe1ace43b6dc5c9eba9b09006bb707/: rotate-equivariants.ipynb
_downloads/1988a6b6d9bdbc80f7dd5d761c0736bf/: water-pulsed.ipynb
_downloads/1c8cf462c1ac9e99d56eec5b597f60b4/: pet-mad.ipynb
_downloads/1dc495a31da62039ca08fc17c6466b80/: pet-phonons.ipynb
_downloads/27b9fcb817bcc82b5255e2fb317b4f3a/: flashmd-demo.py
_downloads/2c684432538bab3d8a6f8db14f3827bf/: heat-capacity.ipynb
_downloads/328f2a3eeccb4e902f81e5646c33e2e8/: environment.yml
_downloads/55f87ac60b353ea9e58b96dcd5c4421a/: pet-ft.py
_modules/: index.html
_sources/: all-examples.rst.txt  contributing.rst.txt  downloading.rst.txt  utils.rst.txt
_static/: all-examples-data.js  chemiscope.min.js  cookbook.css  daily-recipe.js
developer/: get_examples.py
docs/: .gitignore  requirements-equistore.txt  requirements-prebuilt.txt  requirements-rascal.txt  requirements-torch.txt  requirements.txt
examples/: INSTALLING.rst  README.rst
software/: chemiscope.html  cp2k.html  eon.html  featomic.html  gromacs.html  i-pi.html  index.html  kaldo.html  lammps.html  metatensor.html  plumed.html  rascaline.html  scikit-matter.html  torch-pme.html
src/: generate-gallery.py  get_examples.py  latest_docs_run.py
src/atomistic-cookbook-utils/: README.md  pyproject.toml
src/atomistic-cookbook-utils/src/atomistic_cookbook_utils/: __init__.py  _command.py  _download.py
src/atomistic-cookbook-utils/tests/: test_command.py  test_download.py
tests/: test_noxfile.py
topics/: analysis.html  index.html  ml-models.html  nqes.html  sampling.html  universal.html
(+908 files in other folders)
