[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atomistic-cookbook-utils"
version = "0.1.0"
description = "Shared utilities for recipes in the Atomistic Cookbook."
readme = "README.md"
license = { text = "BSD-3-Clause" }
requires-python = ">=3.9"
authors = [{ name = "The Atomistic Cookbook contributors" }]
keywords = ["atomistic", "cookbook", "utilities"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "requests>=2.25",
    "urllib3>=1.26",
]

[project.urls]
Homepage = "https://atomistic-cookbook.org"
Source = "https://github.com/lab-cosmo/atomistic-cookbook/tree/main/src/atomistic-cookbook-utils"
Issues = "https://github.com/lab-cosmo/atomistic-cookbook/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/atomistic_cookbook_utils"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/pyproject.toml",
]
